# MeinCpp

./: CMakeLists.txt  glad.c  main.cpp
Core/: Config.cpp  Input.cpp  Renderer.cpp  Textures.cpp  Window.cpp
Shaders/: triangle.frag  triangle.vert
include/: Config.h  Core.h  Input.h  Renderer.h  Shader.h  Window.h
